[tool.poetry]
name = "github4api"
version = "1.1.3"
description = ""
authors = ["Shervin <68682979+shervinbdndev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "github4api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
bs4 = "^0.0.1"
html5lib = "^1.1"
colorama = "^0.4.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
